--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-bikes.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-bikes.scss
@@ -349,7 +349,37 @@ input#typeOfBikeGuest3::placeholder {
         z-index: 1;
         opacity: 0;        
     }
-    .bike-selected{
+    .checkout-bikes__other-guest, .checkout-bikes__primary-guest {
+        & > div.d-flex {
+            align-items: baseline;
+
+            p:last-of-type {
+                display: none;
+            }
+        }
+        &.show-error-msg {
+            & > div.show-msg {
+                justify-content: space-between;
+                p:last-of-type {
+                    display: block;
+                    color: #a00;
+                    font-size: 14px;
+                }
+    
+                @media (max-width: 768px)  {
+                    flex-direction: column;
+                }
+            }
+        }
+    }
+    .checkout-bikes__bike-grid-guests:has(> .checkout-bikes__bike.woocommerce-invalid:not(.bike-selected) ) {
+        border: 8px solid transparent;
+        box-shadow: 0px 0px 0px 2px rgba(170,0,0,1);
+    }
+    .checkout-bikes__bike.woocommerce-invalid:not(.bike-selected) {
+        // border: 1px solid #a00 !important;
+    }
+    .checkout-bikes__bike.bike-selected{
         border: 2px solid #000000 !important;
     }
     input[type=checkbox] {
