Bugfix/ttnsw optimize logs loading (#581)
* NetSuite Integration: optimize SQL queries for logs and bookings table in the admin panel
prepare the logs table for faster search with indexed table columns
Aanas Task: https://app.asana.com/0/1205472772784381/1209363853792550

* NetSuite Logs Table: add option in the dev tools ot can create indexes of the columns

Asana Task: https://app.asana.com/0/1205828450090907/1209363853792550

* Logs and Bookings Tables: add escaping

Asana Task: https://app.asana.com/0/1205472772784381/1209363853792550

--- a/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
+++ b/wp-content/plugins/trek-travel-netsuite-integration/assets/ttnsw-styles.css
@@ -455,7 +455,7 @@ table.tt-common-logs {
 /* ID */
 .tt-logs-table-ctr table.tt-common-logs th:nth-child(1),
 .tt-logs-table-ctr table.tt-common-logs td:nth-child(1) {
-    width: 4%;
+    width: 5%;
 }
 /* Type */
 .tt-logs-table-ctr table.tt-common-logs th:nth-child(2),
@@ -753,4 +753,27 @@ table.tt-common-logs {
 
 .nav-tab-wrapper .nav-tab .dashicons-admin-tools {
     color: #f0ad4e;
+}
+
+.add-table-indexes form {
+    margin-bottom: 10px;
+}
+
+.add-table-indexes button {
+    width: 100%;
+    text-align: left;
+    padding: 8px 12px;
+}
+
+.add-table-indexes button[disabled] {
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
+.add-table-indexes .notice {
+    margin: 0 0 1rem;
+}
+
+.add-table-indexes .notice p {
+    margin-bottom: 0;
 }
