--- a/wp-content/themes/trek-travel-theme/src/scss/main.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/main.scss
@@ -1,6 +1,6 @@
 // FONTS & ICONS
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import "fonts";
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
 @import url("https://cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css");
