Fix checkout errors and improvements  (#594)
* Fix the checkout steps validation

* fix the checkout validation msg

* Checkout fixes - QA feedback - Step2 Step3

* Fix the checkout field - validation

* Checkout Step 4: add custom error handling for the CyberSource payment errors
overwrite the render_errors method from the SV_WC_Payment_Form_Handler_v5_15_3 class
Asana Task: https://app.asana.com/0/1205828450090907/1209289233857464

* Checkout last step: add custom error handling for the last step billing address and waiver checkbox
using the checkout_error event triggered from woocommerce
Asana Task: https://app.asana.com/0/1205828450090907/1209289233857464

* Checkout last step errors: handle general Cybersource errors and append them to the form instead of the first field

Asana Task: https://app.asana.com/0/1205828450090907/1209289233857464

* Checkout last step validations: fix JS error

Asana Task: https://app.asana.com/0/1205828450090907/1209289233857464

* Payment credit card - error msg

* Fix the error msg mobile

* Checkout Payment errors: change the general error message

Asana Task: https://app.asana.com/0/1205828450090907/1209289233857464

---------

Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-payment.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-payment.scss
@@ -298,6 +298,14 @@ body {
     .wc-cybersource-credit-card-new-payment-method-form{
         display: flex;
         flex-wrap: wrap;
+        .woocommerce-cybersource-error {
+            &.invalid-feedback {
+                font-size: 12px;
+                color: #a00;
+                line-height: 1.2;
+            }
+        }
+
         div.form-row-wide{
             width: 100%;
             // height: 6rem;
@@ -350,6 +358,7 @@ body {
             display: none;
         }
     }
+
     @include media-breakpoint-up(lg) {
         &__add-travel {
             margin-bottom: 40px;
@@ -457,6 +466,14 @@ body {
         .wc-cybersource-credit-card-new-payment-method-form{
             display: flex;
             flex-wrap: wrap;
+
+            .woocommerce-cybersource-error {
+                &.invalid-feedback {
+                    font-size: 12px;
+                    color: #a00;
+                    line-height: 1.2;
+                }
+            }
             div.form-row-wide{
                 width: 40%;
                 height: 6rem;
