--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-payment.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-payment.scss
@@ -328,11 +328,16 @@ body {
             input#wc-cybersource-credit-card-expiry{
                 width: 98%;
                 padding: 0.375rem 0.75rem;
-                font-size: 1rem;
-                line-height: 2.1;
+                // font-size: 1rem;
+                // line-height: 2.1;
                 border: 1px solid #ced4da !important;
                 border-radius: 0.375rem;
                 transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                font-size: 1.375rem !important;
+                font-weight: 400;
+                color: #43454b;
+                line-height: 1.55 !important;
+                font-family: Arial;
             }
         }
         div.form-row-last{
@@ -356,6 +361,16 @@ body {
         }
         p:has(input#wc-cybersource-credit-card-tokenize-payment-method){
             display: none;
+        }
+    }
+    @media (max-width: 1200px) and (min-width: 992px) {
+        .wc-cybersource-credit-card-new-payment-method-form {
+            div.form-row-wide{
+                width: 100% !important;
+            }
+            p#wc-cybersource-credit-card-expiry_field, div.form-row-last{
+                width: 40% !important;
+            }
         }
     }
 
@@ -496,11 +511,16 @@ body {
                 input#wc-cybersource-credit-card-expiry{
                     width: 98%;
                     padding: 0.375rem 0.75rem;
-                    font-size: 1rem;
-                    line-height: 2.1;
+                    // font-size: 1rem;
+                    // line-height: 2.1;
                     border: 1px solid #ced4da !important;
                     border-radius: 0.375rem;
                     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                    font-size: 1.375rem !important;
+                    font-weight: 400;
+                    color: #43454b;
+                    line-height: 1.55 !important;
+                    font-family: Arial;
                 }
             }
             div.form-row-last{
