--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -17,6 +17,62 @@
         }
     }
 
+    .nav-tabs {
+        border-color: black;
+        padding-bottom: 1px;
+        gap: 10px;
+
+        @include media-breakpoint-up(md){
+            gap: 8px;
+        }
+        @include media-breakpoint-down(md) {
+            gap: 5px;
+        }
+        
+    }
+
+    .nav-link {
+        position: relative;
+        border-bottom: 4px solid transparent;
+        outline: 1px solid #F4F4F4;
+        line-height: normal;
+        margin-right: 0 !important;
+        @media (max-width: 540px) {
+            flex: none;
+            color: $gray-500;
+            border-bottom: 4px solid transparent;
+            margin-right: 0 !important;
+        }
+        margin: 0;
+        color: $gray-500;
+        background: #F4F4F4;
+        border-radius: 4px 4px 0px 0px;
+        padding: 8px 16px 4px !important;
+        
+        @include media-breakpoint-down(lg) {
+            font-size: 16px;
+            line-height: 24px;
+        }
+        &.active {
+            font-weight: $font-weight-bold;
+            color: $black;
+            background: transparent;
+            outline:1px solid black;
+            border-bottom: 4px solid #000;
+            @media (max-width: 540px) {
+                font-weight: $font-weight-bold;
+                border: 1px solid $gray-300;
+                border-bottom: 4px solid $black;
+                color: $black;
+                outline: none;
+                span {
+                    
+                    padding-bottom: 7px;
+                }
+            }
+        }
+    }
+
     .accordion {
         display: flex;
         flex-direction: column;
