--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -1403,6 +1403,9 @@
 
     .dates-pricing-container {
       padding: 0 32px !important;
+      @include media-breakpoint-up(sm) {
+        padding-top: 10px !important;
+      }
     }
   }
 
