--- a/wp-content/themes/trek-travel-theme/src/scss/my-account/_order-details.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/my-account/_order-details.scss
@@ -8,6 +8,11 @@
         background: var(--summary-card-background);
         border-radius: 4px;
 
+        .m-msg {
+            font-size: clamp(1rem, 4vw, 1.5rem);
+            line-height: normal;
+        }
+
         & > div {
             background-color: white;
 
@@ -21,9 +26,9 @@
             }
 
             .order-details__heading {
-                font-size: 24px;
+                // font-size: 24px;
                 font-weight: 700;
-                line-height: 28px;
+                // line-height: 28px;
                 margin-bottom: 6px;
             }
 
@@ -46,7 +51,12 @@
             }
         }
 
+        
+
     }
+
+    
+
     &__print {
         font-weight: $font-weight-medium;
         font-size: $font-size-md;
@@ -79,17 +89,17 @@
     &__heading {
         font-family: 'Poppins';
         font-weight: $font-weight-semibold;
-        font-size: 24px;
-        line-height: 36px;
+        // font-size: 24px;
+        // line-height: 36px;
     }
     &__quite {
         // margin-bottom: 40px;
     }
     &__text {
-        &:not(.fs-xl) {
-            font-size: $font-size-sm;
-        }
-        line-height: $line-height-sm;
+        // &:not(.fs-xl) {
+        //     font-size: $font-size-sm;
+        // }
+        // line-height: $line-height-sm;
     }
     &__textbold {
         &:not(.fs-md) {
@@ -155,37 +165,56 @@
         background-size: unset !important;
     }
     &__banner {
-        height: 375px;
-        padding: 32px 20px;
+        height: 40vw;
+        max-height: 600px;
+        // height: 375px;
+        // padding: 32px 20px;
         background-image: linear-gradient(0deg, #000000 -7.63%, rgba(0, 0, 0, 0) 55.25%),url('../../assets/images/ThankyouMobile.jpg');
         color: $white;
+
+        .od-box {
+            text-shadow: 2px 2px 0px rgba(0,0,0,0.6);
+            gap: 10px;
+        }
+
+        @include media-breakpoint-down(md) {
+            height: fit-content;
+            padding: 30px 15px;
+            min-height: 75vw;
+        }
+
         &-heading {
             font-family: 'Poppins';
             font-weight: $font-weight-semibold;
-            font-size: 36px;
-            line-height: 48px;
+            font-size: 4.5rem;
+            line-height: 1.15;
             z-index: 999;
-
-            @media (max-width: 992px) {
-                font-size: 40px;
-                margin-bottom: 12px !important;
+            @include media-breakpoint-down(xxl) {
+                font-size: 3.5rem;
+                line-height: 1.1;
             }
+
+            @include media-breakpoint-down(lg) {
+                font-size: 2.5rem;
+                line-height: 1.1;
+            }
+            
         }
         &-text {
             z-index: 999;
-            line-height: 24px;
+            line-height: 1.2;
             @media (max-width: 992px) {
-                font-size: 16px;
-                line-height: 20px;
-                max-width: 80%;
-                margin-inline: auto;
+                // font-size: 16px;
+                // line-height: 20px;
+                // max-width: 80%;
+                // margin-inline: auto;
             }
 
             @media (max-width: 520px) {
-                max-width: 100%;
+                // max-width: 100%;
             }
             &:not(.fs-xl) {
-                font-size: 16px;
+                // font-size: 16px;
             }
         }
 
@@ -221,9 +250,9 @@
         background-color: black !important;
     }
     @include media-breakpoint-up(lg) {
-        padding: 0px 297px;
-        margin-top: 56px;
-        max-width: 100%;
+        // padding: 0px 297px;
+        // margin-top: 56px;
+        // max-width: 100%;
         &__print,
         &__quite {
             // margin-bottom: 48px;
@@ -232,14 +261,14 @@
             // padding: 32px;
         }
         &__heading {
-            font-size: 24px;
-            line-height: 28px;
+            // font-size: 24px;
+            // line-height: 28px;
         }
         &__text {
             &:not(.fs-xl) {
                 font-size: $font-size-md;
             }
-            line-height: $line-height-md;
+            // line-height: $line-height-md;
         }
         &__textbold {
             &:not(.fs-md) {
@@ -268,43 +297,46 @@
             margin-bottom: 112px;
         }
         &__banner {
-            height: 506px;
-            padding: 56px 80px;
-            padding-top: 100px;
+            
+            // padding: 56px 80px;
+            // padding-top: 100px;
             background-image: linear-gradient(0deg, #000000 -7.63%, rgba(0, 0, 0, 0) 55.25%),url('../../assets/images/Thankyou.jpg');
-            &-heading {
-                font-size: 68px;
-                line-height: 82px;
-                font-weight: 700;
-            }
+            background-position: center 30%;
+            // &-heading {
+            //     font-size: 4.5rem;
+            //     line-height: 1.15;
+            //     font-weight: 700;
+            // }
             &-text {
-                font-size: 20px;
-                line-height: 24px;
-                font-weight: 500;
-                max-width: 994px;
-                margin: 12px auto 1rem;
+                // font-size: 20px;
+                // line-height: 24px;
+                // font-weight: 500;
+                // max-width: 994px;
+                // margin: 12px auto 1rem;
             }
         }
     }
 
     .order-details-container {
-        width: 580px;
+        // width: 580px;
         margin: 0 auto;
 
         @media (max-width: 992px) {
-            width: 94%;
+            // width: 94%;
         }
     }
 }
 
 body:not(.trek-my-account) #order-details-page {
-    transform: translateY(-150px);
+    transform: translateY(0px);
     z-index: 999;
     position: relative;
-    margin-top: 0;
+    margin-top: 30px;
 
-    @media (max-width: 520px) {
-        transform: translateY(-80px);
+
+    @include media-breakpoint-up(xl) {
+        transform: translateY(-100px);
+        margin-top: 0;
     }
 }
 .woocommerce-order{
