Feature/multi trip durations (#614)
* Trip Duration: allow multiple trip durations selections
change Duration facet in Algolia from string to array, use pdp names if possible
Asana Task: https://app.asana.com/0/1205828450090907/1209738362827850/f

* Algolia admin menu: fix the missing menu item for administrators

Asana Task: https://app.asana.com/0/1205828450090907/1209738362827850/f

* Multi Trip Durations: made the year bolder, ends with colon, and border bottom, keep consistent

Asana Task: https://app.asana.com/0/1205828450090907/1209738362827850/f

* Trip Duration styles: adjsut spacing and border bottom

Asana Task: https://app.asana.com/0/1205828450090907/1209738362827850/f

---------

Co-authored-by: Petyo Lazarov <plazarov@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-bar.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-bar.scss
@@ -52,6 +52,38 @@
                     padding-right: 0.5rem;
                 }
             }
+
+            .tour-duration-text span {
+                display: inline-block;
+                width: 100%;
+                position: relative;
+
+                strong {
+                    font-weight: 900;
+                }
+
+                &:not(:last-of-type) {
+                    padding-bottom: 0.2rem;
+                    margin-bottom: 0.2rem;
+                    position: relative;
+                    
+                    // Using box-shadow instead of border-bottom for better cross-device rendering
+                    box-shadow: 0 1px 0 0 #000;
+                    
+                    // Alternative: can use pseudo-element if box-shadow doesn't work well
+                    /*
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        height: 1px;
+                        width: 100%;
+                        background-color: #000;
+                    }
+                    */
+                }
+            }
         }
         .bikes{
             @media (min-width: 768px) {
