--- a/wp-content/themes/trek-travel-theme/src/scss/_pages.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_pages.scss
@@ -2,7 +2,9 @@
 
 // Import PDP section and components
 @import "pages/common";
-@import "pages/hw-landing";
+@import "pages/landing";
+@import "pages/guides";
+@import "pages/testimonials";
 // @import "pages/pdp-overview-section";
 // @import "pages/pdp-faq";
 // @import "pages/pdp-overview-navigation";
