--- a/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/pages/common.scss
@@ -133,18 +133,55 @@
 
 // BANNER HERO
 
+// .banner-hero-full {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   background-size: cover;
+//   background-position: center center;
+//   height: 60vh;
+//   max-height: 920px;
+//   margin-bottom: 50px;
+
+//   @include media-breakpoint-down(md) {
+//     margin-bottom: 30px;
+//   }
+// }
+
 .banner-hero-full {
   display: flex;
   align-items: center;
   justify-content: center;
   background-size: cover;
   background-position: center center;
-  height: 60vh;
-  max-height: 920px;
-  margin-bottom: 50px;
+  position: relative;
+  text-shadow: 2px 2px 0px rgba(0,0,0,0.6);
+  min-height: 350px;
+  height: 35vw;
+  max-height: 825px;
+  margin-bottom: 30px;
+  @include media-breakpoint-down(sm){
+    margin-bottom: 20px;
+  }
 
-  @include media-breakpoint-down(md) {
-    margin-bottom: 30px;
+  &:before {
+      content: '';
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      background: linear-gradient(180deg, rgba(244, 244, 244, 0) 70%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.45) 100%);
+  }
+
+  .container {
+      position: absolute;
+      bottom: 0;
+      margin: auto;
+      margin-bottom: clamp(30px, 5vw, 70px);
+
+      h1 {
+          color: #fff;
+          
+      }
   }
 }
 
