--- a/wp-content/themes/trek-travel-theme/src/scss/_nav.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_nav.scss
@@ -206,7 +206,7 @@
       padding-top: 0 !important;
       border: none;
       a {
-        font-weight: normal !important;
+        // font-weight: normal !important;
       }
       li {
         border: none !important;
