--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -12045,9 +12045,6 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
     padding-top: 0 !important;
     border: none;
   }
-  #mega-menu-wrap-main-menu #mega-menu-main-menu > li > .mega-sub-menu > li a {
-    font-weight: normal !important;
-  }
   #mega-menu-wrap-main-menu #mega-menu-main-menu > li > .mega-sub-menu > li li {
     border: none !important;
     padding-right: 0 !important;
@@ -12487,6 +12484,24 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   --bs-navbar-brand-hover-color: #fff;
   --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.1);
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+li.n-header > a {
+  text-align: center !important;
+  border-bottom: 2px solid #28AAE1 !important;
+  margin-bottom: 10px !important;
+}
+
+li.nsub-header > a {
+  font-weight: 600 !important;
+}
+
+#mega-menu-wrap-main-menu #mega-menu-main-menu li.category-sub-menu.category-sub-menu:not(:last-child) {
+  border-right: unset !important;
+}
+
+#mega-menu-wrap-main-menu #mega-menu-main-menu > li.mega-menu-megamenu > ul.mega-sub-menu {
+  border-bottom: 3px solid #28AAE1 !important;
 }
 
 .toast {
